--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <p>Linked text</p>
+    <!-- App drawer -->
+    <div></div>
+
+    <!-- Navbar -->
+    <div></div>
+
+    <!-- Main content -->
+    <div></div>
 </body>
 </html>
