icons and icon source added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,49 @@
 </head>
 <body>
     <!-- App drawer -->
-    <div></div>
+    <div class="drawer">
+        <div class="dashboard-menuitems">
+            <img src="./icons/view-dashboard.svg" alt="">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/home-circle.svg" alt="">
+            <h1>Home</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/card-account-details-outline.svg" alt="">
+            <h1>Profile</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/message.svg" alt="">
+            <h1>Messages</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/clock-outline.svg" alt="">
+            <h1>History</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/file-multiple-outline.svg" alt="">
+            <h1>Tasks</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/account-group.svg" alt="">
+            <h1>Communities</h1>
+        </div>
+        <!-- Needs extra space here -->
+        <div class="menuItem">
+            <img src="./icons/cog.svg" alt="">
+            <h1>Settings</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/help.svg" alt="">
+            <h1>Support</h1>
+        </div>
+        <div class="menuItem">
+            <img src="./icons/shield-check-outline.svg" alt="">
+            <h1>Privacy</h1>
+        </div>
+    </div>
 
     <!-- Navbar -->
     <div></div>
