--- a/index.html
+++ b/index.html
@@ -54,7 +54,29 @@
     </div>
 
     <!-- Navbar -->
-    <div></div>
+    <div class="navbar">
+        <!-- Top section -->
+        <div class="topNav">
+            <!-- Search icon and search bar -->
+            <div class="search">
+                <div class="menuItem">
+                    <img src="./icons/magnify.svg" alt="">
+                </div>
+                <input type="text" name="search" id="" autocomplete="off">
+            </div>
+            <div class="account">
+                <div class="menuIcon">
+                    <img src="./icons/bell-ring-outline.svg" alt="">
+                </div>
+                <!-- Avatar from github -->
+                <div class="gh-avatar">
+                    <!-- Username -->
+                    <p class="name">Eshan-Sharma</p>
+                </div>
+            </div>
+        </div>
+        <!-- Bottom Section -->
+    </div>
 
     <!-- Main content -->
     <div></div>
