added bottom section logic

--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@
             </div>
         </div>
         <!-- Bottom Section -->
+        <div class="bottom">
+            <!-- Profile details -->
+            <div class="profile">
+                <div class="gh-avatar"></div>
+                <div class="profile-name">
+                    <p class="greeting">Hi there,</p>
+                    <p class="name">Eshan <span class="username">(@Eshan-Sharma)</span></p>
+                </div>
+            </div>
+            <!-- Buttons -->
+            <div class="buttons">
+                <button class="btn">New</button>
+                <button class="btn">Upload</button>
+                <button class="btn">Share</button>
+            </div>
+        </div>
     </div>
 
     <!-- Main content -->
