added card section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,86 @@
     </div>
 
     <!-- Main content -->
-    <div></div>
+    <main class="content">
+        <div class="projects">
+            <h3>Your Project</h3>
+
+            <!-- Section for all project cards -->
+            <div class="cards">
+                <!-- Each individual card, card 1 -->
+                <div class="card">
+                    <h5 class="card-title">Super cool Project</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Explicabo iste voluptatem minus perferendis est delectus quasi optio aliquid
+                    </p>
+                    <div class="icons">
+                        <img src="./icons/star-plus-outline.svg" alt="">
+                        <img src="./icons/eye-plus-outline.svg" alt="">
+                        <img src="./icons/source-merge.svg" alt="">
+                    </div>
+                </div>
+                <!-- Each individual card, card 2 -->
+                <div class="card">
+                    <h5 class="card-title">Impossible App</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Explicabo iste voluptatem minus perferendis est delectus quasi optio aliquid
+                    </p>
+                    <div class="icons">
+                        <img src="./icons/star-plus-outline.svg" alt="">
+                        <img src="./icons/eye-plus-outline.svg" alt="">
+                        <img src="./icons/source-merge.svg" alt="">
+                    </div>
+                </div>
+                <!-- Each individual card, card 3 -->
+                <div class="card">
+                    <h5 class="card-title">Ad Blocker</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Explicabo iste voluptatem minus perferendis est delectus quasi optio aliquid
+                    </p>
+                    <div class="icons">
+                        <img src="./icons/star-plus-outline.svg" alt="">
+                        <img src="./icons/eye-plus-outline.svg" alt="">
+                        <img src="./icons/source-merge.svg" alt="">
+                    </div>
+                </div>
+                <!-- Each individual card, card 4 -->
+                <div class="card">
+                    <h5 class="card-title">Less cool Project</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Explicabo iste voluptatem minus perferendis est delectus quasi optio aliquid
+                    </p>
+                    <div class="icons">
+                        <img src="./icons/star-plus-outline.svg" alt="">
+                        <img src="./icons/eye-plus-outline.svg" alt="">
+                        <img src="./icons/source-merge.svg" alt="">
+                    </div>
+                </div>
+                <!-- Each individual card, card 5 -->
+                <div class="card">
+                    <h5 class="card-title">Easy Peasy App</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Explicabo iste voluptatem minus perferendis est delectus quasi optio aliquid
+                    </p>
+                    <div class="icons">
+                        <img src="./icons/star-plus-outline.svg" alt="">
+                        <img src="./icons/eye-plus-outline.svg" alt="">
+                        <img src="./icons/source-merge.svg" alt="">
+                    </div>
+                </div>
+                <!-- Each individual card, card 6 -->
+                <div class="card">
+                    <h5 class="card-title">Money Maker</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Explicabo iste voluptatem minus perferendis est delectus quasi optio aliquid
+                    </p>
+                    <div class="icons">
+                        <img src="./icons/star-plus-outline.svg" alt="">
+                        <img src="./icons/eye-plus-outline.svg" alt="">
+                        <img src="./icons/source-merge.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
