added accouncement section

--- a/index.html
+++ b/index.html
@@ -175,6 +175,34 @@
                 </div>
             </div>
         </div>
+        <!-- Side content, Announcements and Trending-->
+        <!-- Announcements -->
+        <div class="announcements">
+            <ul class="card">
+                <li class="announcement">
+                    <h5 class="card-title">Site Maintenance</h5>
+                    <p class="class-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime commodi ipsam 
+                        molestiae fugiat voluptatum, vero, ad ducimus vel veritatis incidunt iste sequi quia beatae unde pariatur 
+                        porro eveniet dolor rerum!
+                    </p>
+                </li>
+                <li class="announcement">
+                    <h5 class="card-title">Community Share Day</h5>
+                    <p class="class-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime commodi ipsam 
+                        molestiae fugiat voluptatum, vero, ad ducimus vel veritatis incidunt iste sequi quia beatae unde pariatur 
+                        porro eveniet dolor rerum!
+                    </p>
+                </li>
+                <li class="announcement">
+                    <h5 class="card-title">Updated Privacy Policy</h5>
+                    <p class="class-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime commodi ipsam 
+                        molestiae fugiat voluptatum, vero, ad ducimus vel veritatis incidunt iste sequi quia beatae unde pariatur 
+                        porro eveniet dolor rerum!
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <!-- Trending -->
     </main>
 </body>
 </html>
