added root variables in css

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="bottom">
             <!-- Profile details -->
             <div class="profile">
-                <div class="gh-avatar"></div>
+                <div class="gh-avatar1"></div>
                 <div class="profile-name">
                     <p class="greeting">Hi there,</p>
                     <p class="name">Eshan <span class="username">(@Eshan-Sharma)</span></p>
