added menuItems css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- App drawer -->
     <div class="drawer">
-        <div class="dashboard-menuitems">
+        <div class="dashboard menuItem">
             <img src="./icons/view-dashboard.svg" alt="">
             <h1>Dashboard</h1>
         </div>
