--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                     <img src="./icons/bell-ring-outline.svg" alt="">
                 </div>
                 <!-- Avatar from github -->
-                <div class="gh-avatar">
-                    <!-- Username -->
-                    <p class="name">Eshan-Sharma</p>
+                <div class="gh-avatar"></div>
+                <div class="account">
+                    <p class="username">@Eshan-Sharma</p>
                 </div>
             </div>
         </div>
@@ -181,6 +181,7 @@
         <!-- Side content, Announcements and Trending-->
         <!-- Announcements -->
         <div class="announcements">
+            <h3>Announcements</h3>
             <ul class="card">
                 <li class="announcement">
                     <h5 class="card-title">Site Maintenance</h5>
